# ms-core-v2

./: .gitignore  README.md
src/: .gitignore  BUILD.gn  ms_build.py
src/build_overrides/: build.gni
src/tools_ms/android/: build_aar.py  config.ini
src/tools_ms/ios/: build_ios_libs.py
src/tools_ms/mac/: build_mac_libs.py
